Fri Oct 24 20:02:13 -03 2025:
    - update dependency scraper
    - add default install cmake and go
    - fix function for cache dir
Tue Sep 16 23:01:59 -03 2025:
    - Code rewritten from shell to Rust
    - AlpineBox has been renamed to ALPack
    - Added configuration
    - Reviewed parameters and fixed unexpected bugs