@@ -1,6 +1,10 @@
+Fri Jan 30 21:19:00 -03 2026:
+    - fallback if --apkbuild is dir
+    - fix no_group option
+    - add default install: glib-dev glib-static libtool
 Fri Oct 24 20:02:13 -03 2025:
     - update dependency scraper
-    - add default install cmake and go
+    - add default install: cmake go xz
     - fix function for cache dir
 Tue Sep 16 23:01:59 -03 2025:
     - Code rewritten from shell to Rust
